--- a/windows/.gitconfig
+++ b/windows/.gitconfig
@@ -1,8 +1,6 @@
-[user]
-	name = Phil Hindman
-	email = phil.hindman@gmail.com
-[diff]
 [merge]
 	tool = gvimdiff
+[color]
+	ui = true
 [core]
 	editor = vim.exe
